--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="hero-image">
                 <div class="profile-card neon-border">
                     <div class="profile-avatar pulse-element">
-                        <img src="images/profile.png" alt="Vinod Kumar" class="profile-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <img src="profile.png" alt="Vinod Kumar" class="profile-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                         <i class="fas fa-user-circle profile-icon" style="display: none;"></i>
                     </div>
                     <div class="floating-elements">
@@ -85,7 +85,6 @@
             <div class="scroll-arrow"></div>
         </div>
     </section>
-
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
